task5/admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-front-end-to-admin-back-end-api
  namespace: task5
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: admin-front-end
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-back-end-api-to-admin-front-end
  namespace: task5
spec:
  podSelector:
    matchLabels:
      role: admin-front-end
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: admin-back-end-api
      ports:
        - protocol: TCP
          port: 80
