task5/secret-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: secret-deny-all
  namespace: task5
spec:
  podSelector:
    matchLabels:
      role: secret
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []
